# robert-webdriver

./: Cargo.toml  README.md
.claude/commands/: lint.md
.github/workflows/: code-quality.yml  tests.yml
cdp-examples/: basic-navigation.json  click-test-button.json  extract-title.json
examples/: cdp_system_demo.rs  chat_ui_demo.rs
src/: chat_ui.js  error.rs  lib.rs  main.rs  step_frame.rs
src/browser/: chat.rs  chrome.rs  mod.rs
src/cdp/: claude_prompt.rs  executor.rs  generator.rs  mod.rs  script.rs  validation.rs
tests/: browser_api_test.rs  browser_session_integration_todo.rs  cdp_execution_test.rs  cdp_generator_test.rs  cdp_script_execution_test.rs  chat_ui_test.rs  e2e.rs  error_handling_test.rs  headless_integration.rs  meta_infrastructure_test.rs  screenshot_hang_test.rs  screenshot_test.rs  step_frame_test.rs  test_server.rs  validation_test.rs
